Edited the Hero section, and the values cards to display new message.

--- a/index.html
+++ b/index.html
@@ -29,107 +29,36 @@
     <div id="home" class="page active">
         <div class="hero">
             <div class="container">
-                <h1>Together, We Rise</h1>
-                <p>I'm Callan Wassenaar, and I'm running to bring our voices back to Ottawa. No corporate donors. No party bosses. Just real people, real solutions.</p>
-                <p>Authorized by the campaign manager of Callan Wassenaar</p>
-                <a href="#" class="cta-button" onclick="showPage('platform')">Join Our Movement</a>
+                <h1>We Will Not Ask Permission for Transparency. <br /> We Will Demand it!</h1>
+                <p>This campaign is about building a better Alberta through accountability, transparency, and respect for all people. I believe in collaboration, not division — and I will work alongside anyone who rejects fear‑based control and is committed to real solutions that put people first.</p>
+                <p>Together, we can create measurable change that strengthens communities and restores trust in government.</p>
+                <a href="#" class="cta-button" onclick="showPage('platform')">Pledge to Donate</a>
             </div>
         </div>
         
         <div class="container">
             <section class="content-section">
-                <h2 class="section-title">Platform Pillars</h2>
+                <h2 class="section-title">Value Promise</h2>
                 <div class="content-grid-col">
                     <div class="card">
-                        <h3>Rural Healthcare Access</h3>
-                        <p>I will fight for:
-                            <ul>
-                                <li><strong>Federal investment</strong> in rural hospitals and clinics, especially in towns like Camrose, Wainwright, and Stettler.</li>
-                                <li>Push to expand rural <strong>mental health and addiction services</strong> tailored to rural needs.</li>
-                                <li><strong>Mobile health units</strong> and <strong>telehealth infrastructure</strong> to serve remote communities.</li>
-                            </ul>
+                        <h3>This campaign is not about party bosses or backroom deals - it's about people.</h3>
+                        <p>
+                            Collaboration is possible without compromising independence, and my commitment will always be to put people before politics.
                         </p>
+                        <a href="#" class="cta-button" onclick="showPage('platform')">Pledge to Donate</a>
+                        <a href="#" class="cta-button" onclick="showPage('platform')">Contribute In-Kind</a>
+                        <a href="#" class="cta-button" onclick="showPage('platform')">Volunteer Today</a>
                     </div>
                     <div class="card">
-                        <h3>Agriculture & Food Sovereignty</h3>
-                        <p>I will fight for:
-                            <ul>
-                                <li>Support <strong>family farms and ranchers</strong> with fair pricing, federal grants, and innovation funding.</li>
-                                <li>Protect <strong>Canadian food supply chains</strong> and promote <strong>local food systems</strong>.</li>
-                                <li>Oppose trade deals that undermine <strong>Canadian producers</strong> and rural livelihoods.</li>
-                            </ul>
+                        <h3>Be Part of the Change</h3>
+                        <p>
+                            This campaign is powered by people like you — not party bosses or backroom deals. Every pledge, every hour volunteered, and every skill shared helps us build a stronger, more accountable Alberta.
                         </p>
+                        <a href="#" class="cta-button" onclick="showPage('platform')">Pledge to Donate</a>
+                        <a href="#" class="cta-button" onclick="showPage('platform')">Contribute In-Kind</a>
+                        <a href="#" class="cta-button" onclick="showPage('platform')">Volunteer Today</a>
                     </div>
-                    <div class="card">
-                        <h3>Energy & Economic Transition</h3>
-                        <p>I will fight for:
-                            <ul>
-                                <li>Champion a <strong>just transition</strong> for oil and gas workers, with retraining programs and local job creation.</li>
-                                <li>Push for investment in <strong>clean energy pilot projects</strong> in rural Alberta—solar, geothermal, and bioenergy.</li>
-                                <li></li>
-                            </ul>
-                        </p>
-                    </div>
-                    <div class="card">
-                        <h3>Accountability & Local Representation</h3>
-                        <p>I will fight for:
-                            <ul>
-                                <li>Stand against <strong>parachute candidates</strong> and top-down politics.</li>
-                                <li>Hold <strong>monthly town </strong>halls and provide <strong>transparent reporting</strong> on all federal decisions.</li>
-                                <li>Push for <strong>citizen-led oversight</strong> of federal spending in rural regions.</li>
-                            </ul>
-                        </p>
-                    </div>
-                    <div class="card">
-                        <h3>Indigenous Rights & Reconciliation</h3>
-                        <p>I will fight for:
-                            <ul>
-                                <li>Work with <strong>local Indigenous communities</strong> to implement the <strong>Truth and Reconciliation Commission</strong>'s Calls to Action.</li>
-                                <li>Support <strong>Indigenous-led education, health, and housing</strong> initiatives in our region.</li>
-                                <li>Ensure <strong>clean water access</strong> and infrastructure for all Indigenous communities.</li>
-                            </ul>
-                        </p>
-                    </div>
-                    <div class="card">
-                        <h3>Children’s Rights & Family Support</h3>
-                        <p>I will fight for:
-                            <ul>
-                                <li>Advocate for the <strong>UN Convention on the Rights of the Child (CRC)</strong> to be enshrined in Canadian law.</li>
-                                <li>Push for <strong>youth mental health programs</strong> and <strong>anti-bullying initiatives</strong> in schools.</li>
-                                <li><strong>Expand</strong> federal support for rural childcare, early learning, and family services.</li>
-                            </ul>
-                        </p>
-                    </div>
-                    <div class="card">
-                        <h3>LGBTQ+ Inclusion in Rural Canada</h3>
-                        <p>I will fight for:
-                            <ul>
-                                <li>Promote <strong>safe, inclusive spaces</strong> for LGBTQ+ youth and families in rural Alberta.</li>
-                                <li>Ensure <strong>equitable access to healthcare and housing</strong> for LGBTQ+ individuals.</li>
-                                <li>Support <strong>community education and anti-discrimination programs.</strong></li>
-                            </ul>
-                        </p>
-                    </div>
-                    <div class="card">
-                        <h3>Veterans & Military Families</h3>
-                        <p>I will fight for:
-                            <ul>
-                                <li><strong>Improve federal support for veterans</strong>, especially those stationed at CFB Wainwright.</li>
-                                <li>Expand <strong>mental health services</strong> and <strong>transition programs</strong> for military families.</li>
-                                <li>Push for <strong>timely access to benefits and pensions</strong>.</li>
-                            </ul>
-                        </p>
-                    </div>
-                    <div class="card">
-                        <h3>Infrastructure & Connectivity</h3>
-                        <p>I will fight for:
-                            <ul>
-                                <li>Push for <strong>universal rural broadband</strong> by 2027.</li>
-                                <li>Invest in <strong>highway safety, public transit, and community infrastructure</strong>.</li>
-                                <li>Push for investment in <strong>climate-resilient infrastructure</strong> to protect against floods, droughts, and wildfires.</li>
-                            </ul>
-                        </p>
-                    </div>
+                    
                 </div>
             </section>
 
@@ -140,7 +69,7 @@
                         <!-- <div class="event-date">
                             <span class="month">Aug</span>
                             <span class="day">18</span>
-                        </div>  -->
+                        </div> -->
                         <div class="event-details">
                             <h3>Keep checking in for upcoming events</h3>
                             <!-- <p class="event-info">📍 Battle River Crowfoot Polling Stations • 9:00 AM - 9:00 PM</p>
